[metadata]
name = streamlit-Opencv
version = attr: streamlit_elements.__version__
description = Computer Vision on Opencv for Streamlit.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://app-opencv-app-demov1.streamlit.app/
url = https://app-opencv-app-demov1.streamlit.app/
license = MIT
license_file = LICENSE

[options]
packages = find:
include_package_data = true
python_requires = >= 3.11.5
setup_requires =
    setuptools >= 40.8.0
    wheel
install_requires =
    matplotlib >= 3.9.1
    mediapipe >= 0.10.14
    numpy >= 1.26.4
    opencv-python >= 4.10.0.84
    pandas >= 2.2.2
    pillow >= 10.4.0